# Sirius_Assignment

./: .gitignore  DATA_SETUP.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  requirements_additional.txt  requirements_candidate_models.txt  requirements_optimized.txt
config/: entsoe_config.py
notebooks/: data_engineering.ipynb
src/: __init__.py  baseline_irradiance_model.py  baseline_model_fixed.py  baseline_pipeline_extended.py  baseline_pipeline_profiled.py  build_comprehensive_lookup_table.py  build_full_lookup_table.py  build_german_pv_comprehensive.py  build_german_pv_scaled.py  build_pv_lookup_final.py  candidate_models.py  candidate_models_simple.py  collect_german_solar_generation_v3.py  combine_resampled_chunks.py  csdapi_placeholder.py  debug_data.py  demo_baseline_pipeline.py  entsoe_data_collector_v3.py  example_baseline_usage.py  main_pipeline.py  merge_and_process_3years.py  run_3year_analysis.py  run_baseline_model.py  run_baseline_real_data.py  run_enhanced_small.py  run_optimized_small.py  run_pipeline.py  run_pipeline_small.py  run_pv_lookup_integrated.py  run_pv_lookup_sample.py  scalability_analysis.py  solar_generation_processor.py  solar_radiation_pipeline.py  solar_radiation_pipeline_enhanced.py  solar_radiation_pipeline_optimized.py  test_baseline_model.py  test_optimization.py  validation_pipeline.py
src/config/: baseline_config.py
src/pv_locations/: __init__.py
src/pv_locations/data_sources/: __init__.py  ocf_quartz_loader.py  osm_pv_extractor.py
src/pv_locations/lookup_table/: __init__.py  table_builder.py
src/pv_locations/spatial_indexing/: __init__.py  h3_indexer.py
src/pv_locations/spatial_join/: __init__.py  irradiance_matcher.py
