[project]
name = "sirius-assignment"
version = "0.1.0"
description = "Data Engineering Project with reproducible environment"
authors = [
    {name = "Omar Badri"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "pandas (>=2.3.1,<3.0.0)",
    "numpy (>=2.3.2,<3.0.0)",
    "matplotlib (>=3.10.5,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "ipykernel (>=6.30.1,<7.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "scikit-learn (>=1.7.1,<2.0.0)",
    "scipy (>=1.16.1,<2.0.0)",
    "plotly (>=6.2.0,<7.0.0)",
    "bokeh (>=3.7.3,<4.0.0)",
    "sqlalchemy (>=2.0.42,<3.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "pymongo (>=4.14.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
