[project]
name = "sirius-assignment"
version = "0.1.0"
description = "Data Engineering Project with reproducible environment"
authors = [
    {name = "Omar Badri"}
]
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "pandas (>=2.3.1,<3.0.0)",
    "numpy (>=1.24,<2.3)",
    "matplotlib (>=3.10.5,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "ipykernel (>=6.30.1,<7.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "scikit-learn (>=1.7.1,<2.0.0)",
    "scipy (>=1.16.1,<2.0.0)",
    "plotly (>=6.2.0,<7.0.0)",
    "bokeh (>=3.7.3,<4.0.0)",
    "sqlalchemy (>=2.0.42,<3.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "pymongo (>=4.14.0,<5.0.0)",
    "cdsapi (>=0.7.6,<0.8.0)",
    "xarray (>=2023.1.0,<2024.0.0)",
    "h5netcdf (>=1.6.4,<2.0.0)",
    "polars (>=1.32.2,<2.0.0)",
    "pvlib (>=0.13.0,<0.14.0)",
    "pyarrow (>=21.0.0,<22.0.0)",
    "ephem (>=4.2,<5.0)",
    "numba (>=0.61.2,<0.62.0)",
    "psutil (>=7.0.0,<8.0.0)",
    "h3 (>=4.0.3,<5.0.0)",
    "geopandas (>=0.14.1,<0.15.0)",
    "shapely (>=2.0.2,<3.0.0)",
    "overpy (>=0.7.0,<0.8.0)",
    "xmltodict (>=0.13.0,<0.14.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
